--- a/深入理解Java虚拟机/虚拟机性能监控与故障处理工具.md
+++ b/深入理解Java虚拟机/虚拟机性能监控与故障处理工具.md
@@ -5,3 +5,10 @@
 | jps   | JVM Process Status Tool, 显示指定系统内所有的HotSpot虚拟机进程 |
 | jstat | JVM Statistics Monitoring Tool, 用于收集HotSpot 虚拟机各方面的运行数据 |
 | jinfo | Configuration Info for Java, 显示虚拟机配置信息 |
+| jmap  | Memory Map for Java, 生成虚拟机的内存转储快照(heapdump 文件) |
+| jhat  | JVM Heap Dump Browser, 用于分析heapdump 文件，它会建立一个HTTP/HTML服务器，让用户可以在浏览器上查看分析结果 |
+| jstack | Stack Trace for Java, 显示虚拟机的线程快照 |
+
+### jps 虚拟机进程状况工具
+
+    功能： 可以列出正在运行的虚拟机进程，并显示虚拟机执行主类名称以及这些进程的本地虚拟机唯一ID(LVMId)。
